--- a/Front-End/src/app/layout/contatos/contatos.component.html
+++ b/Front-End/src/app/layout/contatos/contatos.component.html
@@ -31,7 +31,7 @@
         </select>
         &nbsp;&nbsp;
         &nbsp;&nbsp;
-        <button (click)="onCreate();" class="btn btn-outline-primary btn-sm" type="button" style="width: 120px; height: 40px;">
+        <button routerLink="/contato" class="btn btn-outline-primary btn-sm" type="button" style="width: 120px; height: 40px;">
           <img width="20px" alt="" src="../../../assets/ico-add.png" />
           &nbsp;&nbsp;<span>NOVO</span>
         </button>
